fix spacing in rps choice row

--- a/style.css
+++ b/style.css
@@ -3,7 +3,18 @@
     height: 100%;
 }
 
-.rightside{
-    float: right;
-    display: flex;
+.spacebx{
+    justify-content: space-between;
+}
+.btnrps{
+    border-radius: 25px;
+    width: 50px;
+    height: 50px;
+}
+
+.resetscore{
+    justify-content: space-between;
+}
+.ypick&cpick{
+    justify-content: space-between;
 }
